--- a/android/build.gradle
+++ b/android/build.gradle
@@ -1,4 +1,4 @@
-group 'dev.kelvinforteta.flutter_help_scout_nullsafety_0.0.2'
+group 'dev.kelvinforteta.flutter_help_scout_nullsafety'
 version '1.0'
 
 buildscript {
