--- a/example/android/app/build.gradle
+++ b/example/android/app/build.gradle
@@ -33,7 +33,7 @@ android {
 
     defaultConfig {
         // TODO: Specify your own unique Application ID (https://developer.android.com/studio/build/application-id.html).
-        applicationId "com.maxinville.flutter_help_scout_nullsafety_0.0.2_example"
+        applicationId "com.maxinville.flutter_help_scout_nullsafety_example"
         minSdkVersion 21
         targetSdkVersion 29
         versionCode flutterVersionCode.toInteger()
