--- a/example/pubspec.yaml
+++ b/example/pubspec.yaml
@@ -1,5 +1,5 @@
-name: flutter_help_scout_nullsafety_0.0.2_example
-description: Demonstrates how to use the flutter_help_scout_nullsafety_0.0.2 plugin.
+name: flutter_help_scout_nullsafety_example
+description: Demonstrates how to use the flutter_help_scout_nullsafety plugin.
 
 # The following line prevents the package from being accidentally published to
 # pub.dev using `pub publish`. This is preferred for private packages.
@@ -12,9 +12,9 @@ dependencies:
   flutter:
     sdk: flutter
 
-  flutter_help_scout_nullsafety_0.0.2:
+  flutter_help_scout_nullsafety:
     # When depending on this package from a real application you should use:
-    #   flutter_help_scout_nullsafety_0.0.2: ^x.y.z
+    #   flutter_help_scout_nullsafety: ^x.y.z
     # See https://dart.dev/tools/pub/dependencies#version-constraints
     # The example app is bundled with the plugin so we use a path dependency on
     # the parent directory to use the current plugin's version.
